# poc-langchain

./: .gitignore  pyproject.toml
aula/: 02.1_aula.py  02_aula.py
